--- a/Source/Microsoft.Teams.Apps.Timesheet/ClientApp/src/components/add-project/add-project.scss
+++ b/Source/Microsoft.Teams.Apps.Timesheet/ClientApp/src/components/add-project/add-project.scss
@@ -1,9 +1,4 @@
-﻿// <copyright file="add-project.scss" company="Microsoft Corporation">
-// Copyright (c) Microsoft Corporation.
-// Licensed under the MIT license.
-// </copyright>
-
-.add-project-page {
+﻿.add-project-page {
     .step-text {
         margin-top: 0.5rem;
     }
@@ -12,13 +7,12 @@
         overflow-x: hidden !important;
         overflow-y: auto !important;
         width: 100%;
-        height: 84vh;
     }
 
     .button-footer {
         position: absolute;
         width: 89%;
-        bottom: 1rem;
+        bottom: 3.2rem;
         margin-top: 1rem;
     }
 
