--- a/Source/Microsoft.Teams.Apps.Timesheet/ClientApp/src/components/mobile-list/mobile-list.scss
+++ b/Source/Microsoft.Teams.Apps.Timesheet/ClientApp/src/components/mobile-list/mobile-list.scss
@@ -4,7 +4,7 @@
 // </copyright>
 
 .mobile-list-container .manage-mobile-list-view {
-    height: 26vh;
+    height: 35rem;
     overflow-y: auto;
 }
 
@@ -24,6 +24,7 @@
 
 .mobile-list-container .list-header {
     height: 4.8rem;
+    background-color: #F8F8F8;
     margin-top: 1.7rem;
 }
 
