--- a/Source/Microsoft.Teams.Apps.Timesheet/ClientApp/src/components/project-card/project-card.scss
+++ b/Source/Microsoft.Teams.Apps.Timesheet/ClientApp/src/components/project-card/project-card.scss
@@ -6,6 +6,7 @@
 .project-card-container {
     height: 9rem;
     width: 24rem;
+    background-color: #FFFFFF;
     border: 0 solid #E1E1E1;
     box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.12);
     border-radius: 3px;
@@ -13,69 +14,37 @@
     margin-top: 2rem !important;
     padding: 1rem;
     cursor: pointer;
+}
 
-    .dark-container & {
-        border: 0 solid #6E6E6E;
-        box-shadow: 1px 1px 2px 1px #6E6E6E;
-        background-color: #2D2C2C;
-    }
+.project-card-container:hover {
+    background-color: transparent;
+}
 
-    .high-contrast-container & {
-        border: 0 solid #FFF;
-        box-shadow: 1px 1px 2px 1px #FFF;
-        background-color: #000;
-    }
+.project-card-container .circular-progress {
+    height: 6rem;
+    width: 6rem !important;
+}
 
-    .circular-progress {
-        height: 6rem;
-        width: 6rem !important;
-    }
+.project-card-container .text-container .underutilized-text {
+    color: #C4314B;
+}
 
-    .text-container {
-        .underutilized-text {
-            color: #C4314B;
+.project-card-container .text-container .fully-utilized-text {
+    color: #13A40E;
+}
 
-            .high-contrast-container & {
-                color: #1aebff;
-            }
+.project-card-container .text-container .project-title {
+    font-size: 1.6rem;
+}
 
-            .dark-container & {
-                color: #C4314B;
-            }
-        }
+.project-card-container .text-container .project-subtitle {
+    color: #6E6E6E
+}
 
-        .fully-utilized-text {
-            color: #13A40E;
+.project-card-container .text-container .project-text {
+    margin-bottom: 0.5rem;
+}
 
-            .high-contrast-container & {
-                color: #1aebff;
-            }
-
-            .dark-container & {
-                color: #13A40E;
-            }
-        }
-
-        .project-title {
-            font-size: 1.6rem;
-        }
-
-        .project-subtitle {
-            color: #6E6E6E;
-
-            .high-contrast-container & {
-                color: #FFF;
-            }
-
-            .dark-container & {
-                color: #a9a8a8;
-            }
-        }
-
-        .project-text {
-            margin-bottom: 0.5rem;
-        }
-
-        width: 14rem !important;
-    }
+.project-card-container .text-container {
+    width: 14rem !important;
 }
