--- a/Source/Microsoft.Teams.Apps.Timesheet/ClientApp/src/styles/site.scss
+++ b/Source/Microsoft.Teams.Apps.Timesheet/ClientApp/src/styles/site.scss
@@ -5,6 +5,7 @@
 
 .container-div {
     height: 96vh;
+    padding: 0 3.5rem 0 2.5rem;
     width: 100vw;
     position: fixed;
 
@@ -37,8 +38,8 @@
     }
 }
 
-.task-module-container {
-    width: 100%;
+.task-module-container{
+    width:100%;
     padding: 1.5rem;
 }
 
